SEO: Optimized Social Sharing & Meta Tags

--- a/index.html
+++ b/index.html
@@ -4,7 +4,24 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>songswipe</title>
+    <title>SongSwipe | Tactile Music Discovery</title>
+    <meta name="description" content="The most tactile music discovery engine on the planet. Swipe through the sounds of Spotify with physics-based interactions and chromatic vibes." />
+
+    <!-- Open Graph / Facebook / Discord -->
+    <meta property="og:type" content="website" />
+    <meta property="og:url" content="https://seppedorissen.be/songswipe/" />
+    <meta property="og:title" content="SongSwipe | Tactile Music Discovery" />
+    <meta property="og:description" content="Discover your next obsession with a high-performance, physics-based discovery theater." />
+    <meta property="og:image" content="https://seppedorissen.be/songswipe/social-preview.png" />
+
+    <!-- Twitter -->
+    <meta property="twitter:card" content="summary_large_image" />
+    <meta property="twitter:url" content="https://seppedorissen.be/songswipe/" />
+    <meta property="twitter:title" content="SongSwipe | Tactile Music Discovery" />
+    <meta property="twitter:description" content="Discover your next obsession with a high-performance, physics-based discovery theater." />
+    <meta property="twitter:image" content="https://seppedorissen.be/songswipe/social-preview.png" />
+
+    <meta name="theme-color" content="#1db954" />
   </head>
   <body>
     <div id="root"></div>
