--- a/index.html
+++ b/index.html
@@ -1,30 +1,36 @@
 <!doctype html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>SongSwipe | Tactile Music Discovery</title>
-    <meta name="description" content="The most tactile music discovery engine on the planet. Swipe through the sounds of Spotify with physics-based interactions and chromatic vibes." />
 
-    <!-- Open Graph / Facebook / Discord -->
-    <meta property="og:type" content="website" />
-    <meta property="og:url" content="https://seppedorissen.be/songswipe/" />
-    <meta property="og:title" content="SongSwipe | Tactile Music Discovery" />
-    <meta property="og:description" content="Discover your next obsession with a high-performance, physics-based discovery theater." />
-    <meta property="og:image" content="https://seppedorissen.be/songswipe/social-preview.png" />
+<head>
+  <meta charset="UTF-8" />
+  <link rel="icon" type="image/png" href="/favicon.png" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>SongSwipe | Tactile Music Discovery</title>
+  <meta name="description"
+    content="The most tactile music discovery engine on the planet. Swipe through the sounds of Spotify with physics-based interactions and chromatic vibes." />
 
-    <!-- Twitter -->
-    <meta property="twitter:card" content="summary_large_image" />
-    <meta property="twitter:url" content="https://seppedorissen.be/songswipe/" />
-    <meta property="twitter:title" content="SongSwipe | Tactile Music Discovery" />
-    <meta property="twitter:description" content="Discover your next obsession with a high-performance, physics-based discovery theater." />
-    <meta property="twitter:image" content="https://seppedorissen.be/songswipe/social-preview.png" />
+  <!-- Open Graph / Facebook / Discord -->
+  <meta property="og:type" content="website" />
+  <meta property="og:url" content="https://seppedorissen.be/songswipe/" />
+  <meta property="og:title" content="SongSwipe | Tactile Music Discovery" />
+  <meta property="og:description"
+    content="Discover your next obsession with a high-performance, physics-based discovery theater." />
+  <meta property="og:image" content="https://seppedorissen.be/songswipe/social-preview.png" />
 
-    <meta name="theme-color" content="#1db954" />
-  </head>
-  <body>
-    <div id="root"></div>
-    <script type="module" src="/src/main.jsx"></script>
-  </body>
+  <!-- Twitter -->
+  <meta property="twitter:card" content="summary_large_image" />
+  <meta property="twitter:url" content="https://seppedorissen.be/songswipe/" />
+  <meta property="twitter:title" content="SongSwipe | Tactile Music Discovery" />
+  <meta property="twitter:description"
+    content="Discover your next obsession with a high-performance, physics-based discovery theater." />
+  <meta property="twitter:image" content="https://seppedorissen.be/songswipe/social-preview.png" />
+
+  <meta name="theme-color" content="#1db954" />
+</head>
+
+<body>
+  <div id="root"></div>
+  <script type="module" src="/src/main.jsx"></script>
+</body>
+
 </html>
