Feat: Fancy Liquid Cursor & Premium Social Embeds

--- a/index.html
+++ b/index.html
@@ -17,6 +17,9 @@
     content="Discover your next obsession with a high-performance, physics-based discovery theater." />
   <meta property="og:image" content="https://seppedorissen.be/songswipe/social-preview.png" />
 
+  <!-- Theme Color for Discord/Browser (Dark Mode) -->
+  <meta name="theme-color" content="#121212" />
+
   <!-- Twitter -->
   <meta property="twitter:card" content="summary_large_image" />
   <meta property="twitter:url" content="https://seppedorissen.be/songswipe/" />
